--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "sauce/sausage": "~0.11"
     },
     "require-dev": {
-        "codeception/codeception": "~2.0.*"
+        "codeception/codeception": "2.0.*"
     },
     "autoload": {
         "psr-4": {
